--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -7,33 +7,36 @@
 </head>
 <body>
   <div>
-    <form action="{{ .PathUpload }}" method="POST" enctype="multipart/form-data">
+      <form action="{{ .PathUpload }}" method="POST" enctype="multipart/form-data">
       <input type="file" id="file" name="file" required>
       {{ if .AuthUpload }}
         <input type="text" id="token" name="{{ .AuthHeader }}" placeholder="{{ .AuthHolder }}">
       {{ end }}
       <input type="submit" value="Upload">
-    </form>
+      </form>
   </div>
   <br>
   <div>
-  <form action="{{ .PathDownload }}" method="GET">
+    <form action="{{ .PathDownload }}" method="GET">
     <input type="text" id="fileName" name="name" placeholder="Filename" required>
     {{ if .AuthDownload }}
       <input type="text" id="token" name="{{ .AuthHeader }}" placeholder="{{ .AuthHolder }}">
     {{ end }}
     <input type="submit" value="Download">
-  </form>
+    </form>
   </div>
   <br>
   <div>
-  <form action="{{ .PathList }}" method="GET">
+    <form action="{{ .PathList }}" method="GET">
     {{ if .AuthList }}
       <input type="text" id="token" name="{{ .AuthHeader }}" placeholder="{{ .AuthHolder }}">
     {{ end }}
-  <input type="submit" value="List">
-  </form>
+    <input type="submit" value="List">
+    </form>
   </div>
-</div>
+  <br>
+  <div>
+    <a href="{{ .PathHeartbeat }}">server status</a>
+  </div>
 </body>
 </html>
