--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -4,19 +4,57 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ .Title }}</title>
+  <style type="text/css">
+  body {
+    background-color: #002b36;
+    color: #839496;
+    display: flex;
+    flex-direction: column;
+    font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
+    margin: 0;
+    padding: 0;
+  }
+
+  .container {
+    display: flex;
+    flex-grow: 1;
+    justify-content: space-between;
+    padding: 20px;
+  }
+
+  .box {
+    background-color: #073642;
+    border: 2px solid #93a1a1;
+    box-sizing: border-box;
+    color: #839496;
+    flex: 1;
+    margin: 10px;
+    padding: 20px;
+    text-align: center;
+  }
+
+  .footer {
+    background-color: #073642;
+    border-top: 1px solid #93a1a1;
+    color: #839496;
+    padding: 20px;
+    text-align: center;
+    width: 100%;
+  }
+  </style>
 </head>
 <body>
-  <div>
-      <form action="{{ .PathUpload }}" method="POST" enctype="multipart/form-data">
-      <input type="file" id="file" name="file" required>
-      {{ if .AuthUpload }}
-        <input type="text" id="token" name="{{ .AuthHeader }}" placeholder="{{ .AuthHolder }}">
-      {{ end }}
-      <input type="submit" value="Upload">
-      </form>
+  <div class="container">
+  <div class="box">
+    <form action="{{ .PathUpload }}" method="POST" enctype="multipart/form-data">
+    <input type="file" id="file" name="file" required>
+    {{ if .AuthUpload }}
+    <input type="text" id="token" name="{{ .AuthHeader }}" placeholder="{{ .AuthHolder }}">
+    {{ end }}
+    <input type="submit" value="Upload">
+  </form>
   </div>
-  <br>
-  <div>
+  <div class="box">
     <form action="{{ .PathDownload }}" method="GET">
     <input type="text" id="fileName" name="name" placeholder="Filename" required>
     {{ if .AuthDownload }}
@@ -26,7 +64,7 @@
     </form>
   </div>
   <br>
-  <div>
+  <div class="box">
     <form action="{{ .PathList }}" method="GET">
     {{ if .AuthList }}
       <input type="text" id="token" name="{{ .AuthHeader }}" placeholder="{{ .AuthHolder }}">
@@ -34,8 +72,8 @@
     <input type="submit" value="List">
     </form>
   </div>
-  <br>
-  <div>
+  </div>
+  <div class="footer">
     <a href="{{ .PathHeartbeat }}">server status</a>
   </div>
 </body>
