split page title and version

--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -74,7 +74,7 @@
   </div>
   </div>
   <div class="footer">
-    <a href="{{ .PathHeartbeat }}">server status</a>
+    <a href="{{ .PathHeartbeat }}">{{ .Version }}</a>
   </div>
 </body>
 </html>
