clear messages first, use readable timestamp

--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -151,7 +151,7 @@
   <div class="container">
     <div class="box">
       <form action="/" method="POST" enctype="multipart/form-data">
-        <input type="text" name="entry" id="entry">
+        <input type="text" name="message" id="message">
         clear? <input type="radio" name="clear" id="clear">
         <input type="submit" value="Submit">
       </form>
