--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -44,7 +44,10 @@
     width: 100%;
   }
 
-  input[type=text], input[type=submit], input[type=file], input[type=number] {
+  input[type=text],
+  input[type=submit],
+  input[type=file],
+  input[type=number] {
     background-color: #002b36;
     border: none;
     color: #eee8d5;
@@ -53,21 +56,18 @@
     text-decoration: none;
   }
 
-  input[type=number] {
-    width: 28px;
-  }
-
   input[type=text] {
     border-bottom: 1px dotted #fdf6e3;
-    width: 280px;
   }
 
-  a:link, a:visited {
+  a:link,
+  a:visited {
     color: #657b83;
     text-decoration: none;
   }
 
-  a:active, a:hover {
+  a:active,
+  a:hover {
     color: #fdf6e3;
     text-decoration: none;
   }
@@ -110,50 +110,97 @@
     opacity: 1;
     visibility: visible;
   }
+
+  .selectDownloads {
+    width: 4em;
+  }
+
+  .selectFile,
+  .selectFilename,
+  .selectToken {
+    width: 16em;
+  }
+
+  .selectMessage {
+    width: 28em;
+  }
   </style>
 </head>
 <body>
   <div class="container">
     {{ if .PathUpload }}
     <div class="box">
-      <form action="{{ .PathUpload }}" method="POST" enctype="multipart/form-data">
-      <input type="file" id="file" name="file" required>
+      <form action="{{ .PathUpload }}"
+            method="post"
+           enctype="multipart/form-data">
+      <input required type="file"
+                     class="selectFile"
+                      name="file">
         {{ if .AuthUpload }}
-        <input type="text" id="token" name="{{ .AuthHeader }}" placeholder="{{ .AuthHolder }}" required>
+        <input required type="text"
+                       class="selectToken"
+                        name="{{ .AuthHeader }}"
+                 placeholder="{{ .AuthHolder }}">
         {{ end }}
-      <input type="number" name="downloads" id="downloads" min="1" step="1" placeholder="1">
-      <input type="submit" value="Upload">
+      <input type="number"
+            class="selectDownloads"
+             name="downloads"
+              min="1"
+             step="1"
+      placeholder="1">
+      <input type="submit"
+            value="upload">
       </form>
     </div>
     {{ end }}
     {{ if .PathDownload }}
     <div class="box">
-      <form action="{{ .PathDownload }}" method="GET">
-      <input type="text" id="fileName" name="name" placeholder="Filename" required>
+      <form action="{{ .PathDownload }}"
+            method="get">
+      <input required type="text"
+                     class="selectFilename"
+                      name="name"
+               placeholder="filename">
         {{ if .AuthDownload }}
-        <input type="text" id="token" name="{{ .AuthHeader }}" placeholder="{{ .AuthHolder }}" required>
+        <input required type="text"
+                       class="selectToken"
+                        name="{{ .AuthHeader }}"
+                 placeholder="{{ .AuthHolder }}">
         {{ end }}
-      <input type="submit" value="Download">
+      <input type="submit"
+            value="download">
       </form>
     </div>
     {{ end }}
     {{ if .PathList }}
     <div class="box">
-      <form action="{{ .PathList }}" method="GET">
+      <form action="{{ .PathList }}"
+            method="get">
         {{ if .AuthList }}
-        <input type="text" id="token" name="{{ .AuthHeader }}" placeholder="{{ .AuthHolder }}" required>
+        <input required type="text"
+                       class="selectToken"
+                        name="{{ .AuthHeader }}"
+                 placeholder="{{ .AuthHolder }}">
         {{ end }}
-      <input type="submit" value="List">
+      <input type="submit"
+            value="list">
       </form>
     </div>
     {{ end }}
   </div>
   <div class="container">
     <div class="box">
-      <form action="/" method="POST" enctype="multipart/form-data">
-        <input type="text" name="message" id="message">
-        clear? <input type="radio" name="clear" id="clear">
-        <input type="submit" value="Submit">
+      <form action="/"
+            method="post"
+           enctype="multipart/form-data">
+        <input type="text"
+              class="selectMessage"
+               name="message">
+        clear? <input type="radio"
+                     class="selectClear"
+                      name="clear">
+        <input type="submit"
+              value="post">
       </form>
     </div>
     <div class="box">
