--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -232,6 +232,15 @@
                        class="selectToken"
                         name="{{ .AuthHeader }}"
                  placeholder="{{ .AuthHolder }}">
+        {{ else }}
+        {{ range .Files }}
+        <div class="message">{{ .Name }}
+          <span class="owner">
+            {{ .Owner.Address }}
+          </span>
+        </div>
+        <br>
+        {{ end }}
         {{ end }}
         <br>
         <input type="submit"
