index themes, starting with basic dark/light mode

--- a/templates/data/index.tmpl
+++ b/templates/data/index.tmpl
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ .Title }}</title>
-  {{ if .Style }}
+  {{ if .Theme }}
   <style type="text/css">
   {{ template "style" . }}
   </style>
