--- a/templates/data/color.tmpl
+++ b/templates/data/color.tmpl
@@ -14,6 +14,19 @@
     --bg-light:     rgba(238, 232, 213,   1);
     --fg-dark:      rgba(  0   43,  54,   1);
     --fg-light:     rgba(  0,  43,  54,   1);
-{{ else }}
+{{ else if eq .Theme "gold" }}
+    --bg-dark:      rgba(166, 124,   0,   1);
+    --bg-norm:      rgba(255, 191,   0,   1);
+    --bg-norm-half: rgba(255, 191,   0, 0.5);
+    --bg-light:     rgba(255, 212,  71,   1);
+    --fg-dark:      rgba(255, 232, 120,   1);
+    --fg-light:     rgba(191, 151,  48,   1);
+{{ else if eq .Theme "pastelPurple" }}
+    --bg-dark:      rgba(156, 163, 214,   1);
+    --bg-norm:      rgba(207, 193, 232,   1);
+    --bg-norm-half: rgba(207, 193, 232, 0.5);
+    --bg-light:     rgba(242, 213, 239,   1);
+    --fg-dark:      rgba(247, 239, 218,   1);
+    --fg-light:     rgba(179, 221, 196,   1);
 {{ end }}
 {{ end }}
