theme selection template

--- a/templates/data/style.tmpl
+++ b/templates/data/style.tmpl
@@ -151,11 +151,16 @@
     width: 18em;
   }
 
+  .selectTheme {
+    width: 8em;
+  }
+
   .selectClear:hover,
   .selectFilename:hover,
   .selectMessage:hover,
   .selectRefresh:hover,
   .selectSubmit:hover,
+  .selectTheme:hover,
   .selectToken:hover {
     background-color: var(--fg-light);
     color: var(--bg-dark);
