make theme selection optional

--- a/templates/data/footer.tmpl
+++ b/templates/data/footer.tmpl
@@ -6,6 +6,8 @@
       {{ range .VersionFull }} {{ . }} {{ end }}
       </span>
     </div>
+    {{ if .ThemePick }}
     {{ template "themeSelect" }}
+    {{ end }}
   </div>
 {{ end }}
