--- a/templates/data/color.tmpl
+++ b/templates/data/color.tmpl
@@ -20,13 +20,48 @@
     --bg-norm-half: rgba(255, 191,   0, 0.5);
     --bg-light:     rgba(255, 212,  71,   1);
     --fg-dark:      rgba(255, 232, 120,   1);
-    --fg-light:     rgba(191, 151,  48,   1);
-{{ else if eq .Theme "pastelPurple" }}
+    --fg-light:     rgba(255, 220, 115,   1);
+{{ else if eq .Theme "blue" }}
+    --bg-dark:      rgba(  1,  31,  75,   1);
+    --bg-norm:      rgba(  3,  57, 108,   1);
+    --bg-norm-half: rgba(  3,  57, 108, 0.5);
+    --bg-light:     rgba(  0,  91, 150,   1);
+    --fg-dark:      rgba(100, 151, 177,   1);
+    --fg-light:     rgba(179, 205, 224,   1);
+{{ else if eq .Theme "rose" }}
+    --bg-dark:      rgba(175,  83,  83,   1);
+    --bg-norm:      rgba(208, 124, 124,   1);
+    --bg-norm-half: rgba(208, 124, 124, 0.5);
+    --bg-light:     rgba(223, 145, 145,   1);
+    --fg-dark:      rgba(244, 168, 168,   1);
+    --fg-light:     rgba(254, 181, 181,   1);
+{{ else if eq .Theme "lime" }}
+    --bg-dark:      rgba(172, 221, 163,   1);
+    --bg-norm:      rgba(188, 227, 181,   1);
+    --bg-norm-half: rgba(188, 227, 181, 0.5);
+    --bg-light:     rgba(205, 234, 199,   1);
+    --fg-dark:      rgba(221, 241, 218,   1);
+    --fg-light:     rgba(238, 248, 236,   1);
+{{ else if eq .Theme "green" }}
+    --bg-dark:      rgba( 35,  77,  32,   1);
+    --bg-norm:      rgba( 54, 128,  45,   1);
+    --bg-norm-half: rgba( 54, 128,  45, 0.5);
+    --bg-light:     rgba(119, 171,  89,   1);
+    --fg-dark:      rgba(201, 223, 138,   1);
+    --fg-light:     rgba(240, 247, 218,   1);
+{{ else if eq .Theme "purple" }}
     --bg-dark:      rgba(156, 163, 214,   1);
     --bg-norm:      rgba(207, 193, 232,   1);
     --bg-norm-half: rgba(207, 193, 232, 0.5);
     --bg-light:     rgba(242, 213, 239,   1);
     --fg-dark:      rgba(247, 239, 218,   1);
     --fg-light:     rgba(179, 221, 196,   1);
+{{ else if eq .Theme "night" }}
+    --bg-dark:      rgba(  0,   0,   0,   1);
+    --bg-norm:      rgba( 64,   0,   0,   1);
+    --bg-norm-half: rgba( 64,   0,   0, 0.5);
+    --bg-light:     rgba(128,   0,   0,   1);
+    --fg-dark:      rgba(191,   0,   0,   1);
+    --fg-light:     rgba(255,   0,   0,   1);
 {{ end }}
 {{ end }}
