--- a/templates/data/themeSelect.tmpl
+++ b/templates/data/themeSelect.tmpl
@@ -7,16 +7,18 @@
       <option value="">select theme</option>
       <option value="dark">dark</option>
       <option value="light">light</option>
-      <option value="blue">blue</option>
+      <option value="navy">navy</option>
       <option value="gold">gold</option>
       <option value="rose">rose</option>
       <option value="lime">lime</option>
       <option value="green">green</option>
       <option value="purple">purple</option>
       <option value="night">night</option>
+      <option value="miami">miami</option>
+      <option value="lush">lush</option>
     </select>
     <button type="submit"
            class="selectTheme">change theme</button>
-  </form>
+    </form>
   </div>
 {{ end }}
