consolidate index paths from config

--- a/templates/data/download.tmpl
+++ b/templates/data/download.tmpl
@@ -1,7 +1,7 @@
 <!-- download.tmpl -->
 {{ define "download" }}
     <div class="box">
-      <form action="{{ .PathDownload }}"
+      <form action="{{ .Path.Download }}"
             method="get">
         <input required type="text"
                        title="download file by name"
