--- a/templates/data/list.tmpl
+++ b/templates/data/list.tmpl
@@ -1,7 +1,7 @@
 <!-- list.tmpl -->
 {{ define "list" }}
     <div class="box">
-      <form action="{{ .PathList }}"
+      <form action="{{ .Path.List }}"
             method="get">
         <br>
         {{ if .AuthList }}
