consolidate auth header template

--- a/templates/data/auth.tmpl
+++ b/templates/data/auth.tmpl
@@ -3,7 +3,7 @@
 <input required type="text"
                title="authentication required"
                class="selectToken"
-                name="{{ .AuthHeader }}"
-         placeholder="{{ .AuthHolder }}">
+                name="{{ .Auth.Header }}"
+         placeholder="{{ .Auth.Holder }}">
 <br>
 {{ end }}
