--- a/templates/data/style.tmpl
+++ b/templates/data/style.tmpl
@@ -162,6 +162,8 @@
   }
 
   .selectClear:hover,
+  .selectDownloads:hover,
+  .selectDuration:hover,
   .selectFilename:hover,
   .selectMessage:hover,
   .selectRefresh:hover,
