--- a/templates/data/upload.tmpl
+++ b/templates/data/upload.tmpl
@@ -1,7 +1,7 @@
 <!-- upload.tmpl -->
 {{ define "upload" }}
     <div class="box">
-      <form action="{{ .Path.Upload }}"
+      <form action="{{ .Paths.Upload }}"
             method="post"
            enctype="multipart/form-data">
         <input required type="file"
