call auth require paths directly

--- a/templates/data/download.tmpl
+++ b/templates/data/download.tmpl
@@ -9,7 +9,7 @@
                         name="name"
                  placeholder="enter filename">
         <br>
-        {{ if .AuthDownload }}
+        {{ if .Auth.Require.Download }}
           {{ template "auth" . }}
         {{ end }}
         <input type="submit"
