--- a/templates/data/themeSelect.tmpl
+++ b/templates/data/themeSelect.tmpl
@@ -13,9 +13,10 @@
       <option value="lime">lime</option>
       <option value="green">green</option>
       <option value="purple">purple</option>
-      <option value="night">night</option>
       <option value="miami">miami</option>
       <option value="lush">lush</option>
+      <option value="dusk">dusk</option>
+      <option value="night">night</option>
     </select>
     <button type="submit"
            class="selectTheme">change theme</button>
