--- a/templates/data/index.tmpl
+++ b/templates/data/index.tmpl
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {{ if .Theme }}
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/assets/style.css">
     <style>
       :root {
         {{ template "theme" . }}
