--- a/templates/data/index.tmpl
+++ b/templates/data/index.tmpl
@@ -4,6 +4,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="{{ .Version }}">
+    <meta http-equiv="Content-Security-Policy"
+             content="child-src   'none';
+                      default-src 'self';
+                      frame-src   'none';
+                      object-src  'none';
+                      script-src  'self';
+                      style-src   'self' 'unsafe-inline';">
     {{ if .Theme }}
     <link rel="stylesheet" href="/assets/style.css">
     <style>
