implement index placeholders in templates

--- a/templates/data/auth.tmpl
+++ b/templates/data/auth.tmpl
@@ -4,6 +4,6 @@
                title="authentication required"
                class="selectToken"
                 name="{{ .Auth.Header }}"
-         placeholder="{{ .Auth.Holder }}">
+         placeholder="{{ .Index.Placeholder.Auth }}">
 <br>
 {{ end }}
