--- a/templates/data/download.tmpl
+++ b/templates/data/download.tmpl
@@ -7,7 +7,7 @@
                        title="download file by name"
                        class="selectFilename"
                         name="name"
-                 placeholder="enter filename">
+                 placeholder="{{ .Index.Placeholder.Filename }}">
         <br>
         {{ if .Auth.Require.Download }}
           {{ template "auth" . }}
