--- a/templates/data/index.tmpl
+++ b/templates/data/index.tmpl
@@ -7,10 +7,10 @@
     <meta name="description" content="{{ .Version }}">
     <meta http-equiv="Content-Security-Policy"
              content="child-src   'none';
-                      default-src 'self';
+                      default-src 'none';
                       frame-src   'none';
                       object-src  'none';
-                      script-src  'self';
+                      script-src  'none';
                       style-src   'self' 'unsafe-inline';">
     {{ if .Theme }}
     <link rel="stylesheet" href="/assets/style.css">
