--- a/templates/data/index.tmpl
+++ b/templates/data/index.tmpl
@@ -5,13 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ .Version }}">
-    <meta http-equiv="Content-Security-Policy"
-             content="child-src   'none';
-                      default-src 'none';
-                      frame-src   'none';
-                      object-src  'none';
-                      script-src  'none';
-                      style-src   'self' 'unsafe-inline';">
+    {{ if .Index.CSP }}
+    {{ template "csp" . }}
+    {{ end }}
     {{ if .Theme }}
     <link rel="stylesheet" href="/assets/style.css">
     <style>
