--- a/templates/data/header.tmpl
+++ b/templates/data/header.tmpl
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{{ .Version }}">
+    <meta name="description" content="{{ .Version.id }}-{{ .Version.vers }}">
     {{ if .Index.CSP }}
     {{ template "csp" . }}
     {{ end }}
